fix(apollo, look&feel): wrong colors on CheckboxCard and Checkbox

--- a/client/apollo/css/src/Form/Checkbox/Checkbox/CheckboxApollo.scss
+++ b/client/apollo/css/src/Form/Checkbox/Checkbox/CheckboxApollo.scss
@@ -14,13 +14,6 @@
     }
   }
 
-  input[type="checkbox"]:hover {
-    ~ .af-checkbox__icons {
-      --checkbox-border: 1px var(--axa-blue-100);
-      --checkbox-box-shadow-color: var(--axa-blue-100);
-    }
-  }
-
   input[type="checkbox"]:checked {
     ~ .af-checkbox__icons {
       --checkbox-border: 1px var(--axa-blue-100);
@@ -30,6 +23,13 @@
       & .af-checkbox__checked {
         --checkbox-check-fill: var(--white);
       }
+    }
+  }
+
+  input[type="checkbox"]:not([aria-invalid="true"]):hover {
+    ~ .af-checkbox__icons {
+      --checkbox-border: 1px var(--axa-blue-100);
+      --checkbox-box-shadow-color: var(--axa-blue-100);
     }
   }
 }
